--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
+    "netlify-cli": "^9.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -17,6 +18,7 @@
   },
   "scripts": {
     "deploy": "npm run build&&gh-pages -d build",
+    "netlify": "netlify",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
