--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://antoine-jo.github.io/frontend/",
+  "homepage": "https://antoinejonville.netlify.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
